--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="assets/img/style.css">
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Mon site Moderne</title>
+    <link rel="stylesheet" href="assets/img/style.css" />
+  </head>
+  <body>
+    <header class="header-Contener">
+      <h1>Mon Site Moderne</h1>
+      <div class="Nav">
+        <img src="" alt="" />
+      </div>
+    </header>
+    <main class="Main-Contener">
+      <section>
+        <div class="ImgP">
+          <img src="assets/img/Lion.jpg" alt="" />
+        </div>
+        <div>
+          <h2>Bienvenue !</h2>
+          <p>
+            Voici un exemple de site responsiv a reproduire. il utilise une
+            seule media query pour s'adapter aux ecrans mobiles.
+          </p>
+        </div>
+      </section>
+      <section class="Service">
+        <h2>Nos Services</h2>
+        <article class="S1">
+          <h3>Service 1</h3>
+          <p>Un service simple et efficace pour bien demarrer</p>
+        </article>
+        <article class="S2">
+          <h3>Service2</h3>
+          <p>Une solution adapter a vos besoin</p>
+        </article>
+        <article class="S3">
+          <h3>Service2</h3>
+          <p>Un accompagnement personalise pour aller plus loin</p>
+        </article>
+      </section>
+    </main>
+    <footer>
+        <p>&copy;Mon site Moderne</p>
+    </footer>
+  </body>
 </html>
