--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
     <header class="header-Contener">
       <h1>Mon Site Moderne</h1>
       <div class="Nav">
-        <img src="" alt="" />
+        <img src="assets/img/burger.png" alt="Menu burger" />
       </div>
     </header>
     <main class="Main-Contener">
       <section>
         <div class="ImgP">
-          <img src="assets/img/Lion.jpg" alt="" />
+          <img src="assets/img/Lion.jpg" alt="Lion" />
         </div>
-        <div>
+        <div class="B">
           <h2>Bienvenue !</h2>
           <p>
             Voici un exemple de site responsiv a reproduire. il utilise une
@@ -43,7 +43,7 @@
       </section>
     </main>
     <footer>
-        <p>&copy;Mon site Moderne</p>
+      <p>&copy;Mon site Moderne</p>
     </footer>
   </body>
 </html>
